# mappedmem

./: .gitignore  AGENTS.md  CMakeLists.txt
src/: app.cpp  app.hpp  main.cpp  proc.cpp  proc.hpp
